<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main_LBL_encodeInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_instructions"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main_LBL_decodeInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode_instructions"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_ETXT_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_message"
            android:inputType="text"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_ETXT_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_secret_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_ETXT_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/enter_your_key"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_genKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_key"
                android:textSize="12sp" />


        </LinearLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/main_SWT_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/decode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encryption_method"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/main_SWT_ECB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/aes_ecb"
                android:textStyle="" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/main_SWT_CBC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/aes_cbc" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_ETXT_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/your_result_will_be_shown_here"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>